# clustering

./: CMakeLists.txt  README.md  check_sz.py  commands.txt  compareZ.py  compute_scores.py  createData.py  findAssignments.py  getResultImages.py  inputConfig.txt  inputConfigTemplate.txt  logs.txt  output_file.txt  plot.py  plot.sh  plot_combination.py  plot_experiment.py  plot_scores.py  run.sh  run_hyp.sh
cases/case-1-1/experiments/: result.csv  stats.csv
cases/case-1-1/experiments/config/: variances.csv
cases/case-1-1/experiments/data/: y.csv
cases/case-1-2/experiments/: result.csv  stats.csv
cases/case-1-2/experiments/data/: Y.csv  (+1 more)
cases/case-1-3/experiments/: result.csv  stats.csv
cases/case-2-1/: Y.csv
cases/case-2-1/experiments/: result.csv  stats.csv
cases/case-2-2/: Y.csv  result.csv
cases/case-2-2/experiments/: result.csv  stats.csv
cases/case-2-3/experiments/: result.csv  stats.csv
cases/case-2-4/: Y.csv
cases/case-2-4/experiments/: result.csv  stats.csv
cases/case-2-5/: y.csv
cases/case-2-5/experiments/: result.csv  stats.csv
cases/case-3-1/: y.csv
cases/case-3-1/experiments/: result.csv  stats.csv
cases/case-3-2/experiments/: result.csv  stats.csv
cases/case-3-3/experiments/: result.csv  stats.csv
cases/case-4/data/: Y.csv  assignments.csv
cases/case-4/experiments/: result.csv  stats.csv
config/: centers.csv  variances.csv
data/: assignments.csv  x.csv  y.csv
scripts/: config.csv  output  read_csv.cpp
src/: Data.cpp  Data.h  Observation.cpp  Observation.h  Trainer.cpp  Trainer.h  run.cpp  util.cpp  util.h
(+1764 files in other folders)
